Header: Fix color of toggle on mobile on colored headers

--- a/src/fragments/Header/Header.css
+++ b/src/fragments/Header/Header.css
@@ -21,6 +21,11 @@
   .subNavItems {
     background-color: #2b303b;
   }
+  .bar {
+    &, &:before, &:after {
+      background-color: $gray1;
+    }
+  }
 }
 .whiteLogo {
   color: white;
